CMakePM: Filter out external and CMake internal files as project files

The number of cmake files set to `project()->setExtraProjectFiles` went
for a project like Qt Creator from 1533 to 489.

Task-number: QTCREATORBUG-32209
Change-Id: I3ad69a41c01f1de534b6a7621c3323b5f4912558
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>